some fixes to textEditor, a (failed) test to use tinymce + CSS fix for visible scrolling to lesson form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -712,25 +712,26 @@ html.lessons.new, html.lessons.edit {
 
 
 .pull-resource::-webkit-scrollbar, #note-take::-webkit-scrollbar, #lesson-helpers::-webkit-scrollbar {
-  width: 6px;
-  background: -webkit-gradient(linear,left top,right top,color-stop(0%,rgba(202, 202, 202, 0.07)),color-stop(100%,rgba(229, 229, 229, 0.07)));
+  width: 12px;
+  /*background: -webkit-gradient(linear,left top,right top,color-stop(0%,rgba(202, 202, 202, 0.07)),color-stop(100%,rgba(229, 229, 229, 0.07)));
   background: -webkit-linear-gradient(left,rgba(202, 202, 202, 0.07) 0%,rgba(229, 229, 229, 0.07) 100%);
   -webkit-box-shadow: 0 0 1px 0 rgba(0,0,0,.15) inset,0 1px 0 0 #fff;
   box-shadow: 0 0 1px 0 rgba(0,0,0,.15) inset,0 1px 0 0 #fff;
-  background-color: #E5E5E5;
+  background-color: #E5E5E5;*/
   overflow: visible;
-  border-radius: 0px;
-  border: solid 1px #A6A6A6;
+  /*border-radius: 0px;
+  border: solid 1px #A6A6A6;*/
 }
 
 .pull-resource::-webkit-scrollbar-track, #note-take::-webkit-scrollbar-track, #lesson-helpers::-webkit-scrollbar-track  {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    border-radius: 10px;
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.6);
+    border-radius: 10px;*/
 }
 
 .pull-resource::-webkit-scrollbar-thumb, #note-take::-webkit-scrollbar-thumb, #lesson-helpers::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.6);
+    background-color: darkgray;
 }
 
 .side-menu {
